# LyaCodeX

./: .gitignore  PLANO_EM_DISCUSSÃO.md  README.md  engine.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
backend/: Cargo.toml  README.md
backend/src/: commands.rs  contracts.rs  error.rs  keychain.rs  lib.rs  local_engine.rs  providers.rs  security.rs  skill_catalog.rs  tauri_commands.rs  transport.rs  workspace.rs
backend/tests/: security_policy.rs
docs/: AGENT_RUNTIME.md  AI_RULES.md  APPROVED_PHASES.md  ARCHITECTURE.md  BACKEND_RUST.md  FIRST_RUN_LOCAL_MODEL.md  HYBRID_MODES.md  IMPLEMENTATION_MAP.md  INSTALLERS.md  ONBOARDING_CREDITS.md  ROADMAP.md  RUNNING_LOCAL.md  RUNTIME_CHAT_PANEL.md  SECURITY.md  SHELL_NATIVE_PRESENCE.md  SKILL_CATALOG.md  SKILL_SPEC.md  TAURI_DESKTOP.md  THEME_TOKENS.md  VISUAL_IDENTITY.md  WORKSPACE_ENGINE.md
engine/: README.md
engine/src/: index.ts
engine/src/agent/: approval.ts
engine/src/keychain/: keyRef.ts
engine/src/memory/: memoryEvents.ts
engine/src/model-gateway/: models.ts  providers.ts
engine/src/runtime/: auditLog.ts  runtimeOrchestrator.ts
engine/src/security/: policy.ts
examples/prompts/: runtime-system-prompt.md
examples/trial-gateway/: README.md  worker.js
frontend/: README.md
frontend/src/: App.tsx  index.ts  main.tsx  styles.css
scripts/: git-sync.ps1  install-aliases.ps1  install-lyacodex-ii.ps1
shared/: contracts.ts
shared/types/: agent.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+34 files in other folders)
