[package]
name = "lyacodex_ii_backend"
version = "0.1.0"
edition = "2021"
description = "LyaCodex II backend core for keychain, providers and runtime transport"

[lib]
name = "lyacodex_ii_backend"
path = "src/lib.rs"

[dependencies]
keyring = "3"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", optional = true }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
wiremock = "0.6"

[features]
default = []
tauri-commands = ["tauri"]
