[package]
name        = "lyacodex_desktop"
version     = "0.1.0"
description = "LyaCodeX — agente de terminal com IA para programadores. Se você pensa, você executa."
authors     = ["Luis Antonio Cardozo"]
edition     = "2021"

[lib]
name        = "lyacodex_desktop_lib"
crate-type  = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
clap               = { version = "4", features = ["derive"] }
lyacodex_backend   = { path = "../backend", features = ["tauri-commands"] }
